--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -173,49 +173,49 @@
             <div class="carousel owl-carousel">
                   <div class="card">
                     <div class="box">
-                        <img src="./images/work1.jpg" alt="">
-                        <div class="text">LYST.com</div>
-                        <p>An international website which provide all type of clothing item which you can order through online, I and my team members collaboratively made a clone of it</p>
+                        <img src="./images/work1.png" alt="">
+                        <div class="text">Naukari.com</div>
+                        <p>Clone of the naukri web app which is an platform of job seekers and hiring managers to meet, the services went commercial in October 1997.with 5 collaborators in 5days.</p>
                         <p class="techStack">Tech Used: HTML, CSS , JavaScript </p>
                         <div class="repo-links">
                             <div class="repo-div">
-                                <span>  <a href="https://github.com/Mozakir178/LYST.com-Clone" target="_blank"> Git Repo </a></span>
+                                <span>  <a href="https://github.com/Sandipmaury/naukri" target="_blank"> Git Repo </a></span>
                             </div>
                             <div class="demo-div">
-                                <span> <a href="https://courageous-frangipane-f0775f.netlify.app" target="_blank">  Live Site  </a></span>
+                                <span> <a href="https://comforting-blini-a4bce3.netlify.app/" target="_blank">  Live Site  </a></span>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="./images/work2.jpg" alt="">
-                        <div class="text">Banggood.in</div>
+                        <img src="./images/work2.png" alt="">
+                        <div class="text">zoomcar.com</div>
                       <!-- <p>Inspired by Zara.com, I tried to create a Clone of it with the all the functionalities of the original One..</p> -->
-                      <p>An US based website which provide electronic item arround the world, I and my team members collaboratively made a clone of it.</p>
-                      <p class="techStack">Tech Used: Html, CSS, JavaScript</p>
+                      <p>
+                        Zoomcar is an Indian self-drive car rental company, headquartered in Bangalore, India. The company was founded in 2013 by David Back and Greg Moran, The company operates in 45 cities across the country. In this project </p>
                         <div class="repo-links">
                             <div class="repo-div">
-                                <span>  <a href="https://github.com/Kunal-Ladhani/Banggood-Clone" target="_blank"> Git Repo </a></span>
+                                <span>  <a href="https://github.com/shubham-matoliya/-lean-school-408" target="_blank"> Git Repo </a></span>
                             </div>
                             <div class="demo-div">
-                                <span> <a href="https://banggood-clone-masai.netlify.app/" target="_blank">  Live Site  </a></span>
+                                <span> <a href="https://zoomcar-constructive-project-work.netlify.app/" target="_blank">  Live Site  </a></span>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="./images/work3.jpg" alt="">
-                        <div class="text">ASOS.com</div>
-                        <p>One of the best clothing website where we came and oreder our perfect clothing for US. I and my team members collaboratively made a clone of it.</p>
+                        <img src="./images/work3.png" alt="">
+                        <div class="text">zee5.com</div>
+                        <p>ZEE5.COM CLONE : This project is clone of zee5.com . It is an OTT platform which serves movies and web-series to their customer on paid subscription.</p>
                         <p class="techStack">Tech Used: Html, CSS, JavaScript</p>
                         <div class="repo-links">
                             <div class="repo-div">
-                                <span>  <a href="https://github.com/Arun-Jawlia/Clone-of-Asos-web" target="_blank"> Git Repo </a></span>
+                                <span>  <a href="https://github.com/vivekraj21/unkempt-direction-8363" target="_blank"> Git Repo </a></span>
                             </div>
                             <div class="demo-div">
-                                <span> <a href="https://moonlit-taffy-38ae5b.netlify.app/" target="_blank">  Live Site  </a></span>
+                                <span> <a href="https://coruscating-sprinkles-12d10b.netlify.app/index.html" target="_blank">  Live Site  </a></span>
                             </div>
                         </div>
                     </div>
@@ -349,7 +349,7 @@
 
 
 <script>
-  GitHubCalendar(".calendar", "ChocotacoOp");
+  GitHubCalendar(".calendar", "Pritesh0711");
   // or enable responsive functionality
-  GitHubCalendar(".calendar", "ChocotacoOp", { responsive: true });
+  GitHubCalendar(".calendar", "Pritesh0711", { responsive: true });
 </script>
