--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
                 <li><a href="#project" class="menu-btn">Projects</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
-                <li><a  href="./images/Pritesh Jha fw19_1135.pdf" download target="_blank" onclick="window.open('https://drive.google.com/file/d/1ceY3bn-imh9of1NQ_wNAbpa1Uf3vSrZ6/view?usp=sharing')">Resume</a></li>
+                <li><a  href="./images/Pritesh_Jha_Resume.pdf" download target="_blank" onclick="window.open('https://drive.google.com/file/d/1ceY3bn-imh9of1NQ_wNAbpa1Uf3vSrZ6/view?usp=sharing')">Resume</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -43,7 +43,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Pritesh Jha</div>
                 <div class="text-3">And I'm a Java Backend Developer<span class="typing"></span></div>
-                <a class="resume-link" target="_blank" href="./images/Pritesh Jha fw19_1135.pdf" download target="_blank" onclick="window.open('https://drive.google.com/file/d/1ceY3bn-imh9of1NQ_wNAbpa1Uf3vSrZ6/view?usp=sharing')">
+                <a class="resume-link" target="_blank" href="./images/Pritesh_Jha_Resume.pdf" download target="_blank" onclick="window.open('https://drive.google.com/file/d/1ceY3bn-imh9of1NQ_wNAbpa1Uf3vSrZ6/view?usp=sharing')">
                     <div class="resume">
                       <h3>Resume</h3>
                     </div>
