--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             <div class="about-content">
                 <div class="column left">
                     <!-- <img src="./images/formal with fill.jpg" alt="Rajat"> -->
+                   <img src="./images/pritesh_formal.jpg" alt="Rajat"> 
                 </div>
                 <div class="column right">
                     <div class="text">I'm Pritesh Jha  <span class="typing-2"></span></div>
